--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,28 +8,29 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header>
-<section>
-    <img src = "" id="logo">
-    <h1>Bus Mall</h1>
-</section>
-<input type="submit" value="View Results" id ="submitbtn">
-<nav>
-    <ul>
-      <li><a href ="">Home</a></li>
-      <li><a href ="">About Us</a></li>
-      <li><a href ="">Contact</a></li>
-    </ul>
-  </nav>
-    </header>
-    <main>
-        <section id ="images-Section">
-            <img src="" alt="" id ="st-image">
-            <img src="" alt="" id ="nd-image">
-            <img src="" alt="" id ="rd-image">
+        <section>
+            <img src="" id="logo">
+            <h1>Bus Mall</h1>
         </section>
-        <ul id = "Final-List"></ul>
+    </header>
+
+    <main>
+        <form id="maxuserinput">
+            <label>Please insert num to vote</label>
+            <input type="number" id="userInput">
+            <input type="submit" value="Submit" id="submitbtn">
+        </form>
+        
+        <section id="images-Section">
+            <div id= "imagetitle1"><img src="" alt="" id="st-image"></div>
+            <div id="imagetitle2"><img src="" alt="" id="nd-image"></div>
+            <div id="imagetitle3"><img src="" alt="" id="rd-image"></div>
+        </section>
+        <ul id="Final-List"></ul>
+        <input type="submit" value="View Results" id="submitbtn1" disabled>
 
     </main>
     <footer>
@@ -36,4 +38,5 @@
     </footer>
     <script src="js/app.js"></script>
 </body>
+
 </html>
