--- a/index.html
+++ b/index.html
@@ -23,19 +23,20 @@
             <input type="number" id="userInput">
             <input type="submit" value="Submit" id="submitbtn">
         </form>
-        
+
         <section id="images-Section">
-            <div id= "imagetitle1"><img src="" alt="" id="st-image"></div>
+            <div id="imagetitle1"><img src="" alt="" id="st-image"></div>
             <div id="imagetitle2"><img src="" alt="" id="nd-image"></div>
             <div id="imagetitle3"><img src="" alt="" id="rd-image"></div>
         </section>
         <ul id="Final-List"></ul>
         <input type="submit" value="View Results" id="submitbtn1" disabled>
-
+        <canvas id="myChart"></canvas>
     </main>
     <footer>
         <h2>Bus Mall © 2021- All Rights Reserved.</h2>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="js/app.js"></script>
 </body>
 
