--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Bus Mall</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Potta+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
